<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trip2gether</string>
    <string name="gallery">Open Gallery</string>
    <string name="google">Search on Google</string>
    <string name="title_activity_trip_list">My trips</string>
    <string name="title_activity_edit_trip">Edit Trip</string>
    <string name="title_activity_site_list">Sites</string>
    <string name="title_activity_register_form">Registry</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="title_activity_add_friend">Add Friend</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_trip">New Trip</string>
    <string name="title_activity_new_site">New Site</string>
    <string name="userHint">User</string>
    <string name="passwHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Registry on Trip2Gether</string>
    <string name="addTitle">Add New Trip</string>
    <string name="editUserProfile">Edit User Profile</string>
    <string name="updateUserProfileButton">UPDATE PROFILE</string>
    <string name="loginErr">User not found</string>
    <string name="nombre">Name</string>
    <string name="apellidos">Surname</string>
    <string name="pais">Country</string>
    <string name="ciudad">City</string>
    <string name="fecha_nacimiento">Birth Date</string>
    <string name="mail">Mail address</string>
    <string name="send_register">Send Registration</string>
    <string name="tripHint">Trip title</string>
    <string name="saveTrip">SAVE</string>
    <string name="description">Description:</string>
    <string name="stars">Your Score:</string>
    <string name="editSite">editSite</string>
    <string name="title_activity_site_view">Site</string>
    <string name="dateStart">Start date</string>
    <string name="dateEnd">End date</string>
    <string name="tripName">Trip Name</string>
    <string name="addFriendToTrip">Add Friend</string>
    <string name="addImageToTrip">ADD IMAGE</string>
    <string name="precio">Price:</string>
    <string name="duracion">Duration:</string>
    <string name="duracionMin">Duration (minutes)</string>
    <string name="moneda">€</string>
    <string name="minutos">minutes</string>
    <string name="mailFriend">Friend mail</string>
    <string name="save">SAVE</string>
    <string name="notifications">Notifications</string>
    <string name="friendRequest">Has sent you a friend request</string>
    <string name="friendRequestConfirm">Request accepted</string>
    <string name="friendRequestDecline">Request denied</string>
    <string name="register">Registry</string>
    <string name="newFriend">Add Friend</string>
    <string name="puntuar">Rate</string>
    <string name="deleteSite">DELETE THIS SITE</string>
    <string name="deleteTrip">DELETE THIS TRIP</string>
    <string name="editSiteTitle">EDIT SITE</string>
    <string name="allFieldsRequired">All Fields Required.</string>
    <string name="errorDateFinal">La fecha de inicio a de ser inferior a la de final.</string>
    <string name="errorMaxTrips">Máximo de viajes activos alcanzado, por favor elimina un viaje antiguo antes de continuar.</string>
    <string name="country_prompt">Choose a country</string>
    <string name="addAvatar">Add profile picture from:</string>

    <string name="sentFriendRequest">Sent friend request to </string>
    <string name="userNotExist">The user does not exist.</string>
    <string name="userAreYou">This is your user.</string>
    <string name="friendShipExisting">Friendship exists between theirs.</string>
    <string name="notificationAlreadySent">The notification has already been sent/received.</string>
    <string name="userProfileUpdated">Updated user profile.</string>
    <string name="samePasswords">Old and new passwords are equal.</string>
    <string name="deletedSite">Deleted Site </string>
    <string name="deleteSitePermits">Only the administrator can delete the site </string>
    <string name="nameRequired">Name required</string>
    <string name="deletedTrip">Deleted Trip </string>
    <string name="errorUpdatingProfile">Error updating the user profile</string>
    <string name="errorCreatingTrip">Can\'t create de Trip, please try again</string>
    <string name="NotInternet">Not internet connection</string>
    <string name="registrationOK">Registration completed</string>
    <string name="errorRegistration">Error registering the user</string>
    <string name="invalidEmail">Invalid email adress</string>

    <string-array name="arrayDefault">
        <item>Country not selected</item>
    </string-array>

    <string-array name="ciudadDefault">
        <item>Choose a city</item>
    </string-array>

    <string-array name="paisDefault">
        <item>Choose a Country</item>
    </string-array>

    <string-array name="CiudadesEspaña">
        <item>Barcelona</item>
        <item>Madrid</item>
        <item>Valencia</item>
    </string-array>

    <string-array name="CiudadesAlemania">
        <item>Munich</item>
        <item>Berlin</item>
        <item>Hamburg</item>
    </string-array>

    <string-array name="CiudadesFrancia">
        <item>Paris</item>
        <item>Lyon</item>
        <item>Marseilles</item>
    </string-array>

    <string name="title_activity_site_maps">Map</string>
    <string name="title_activity_map">Travel Map</string>
    <!-- OPCIONS DE LA DRAWER LIST -->
    <string-array name="options_array">
        <item>Profile</item>
        <item>My Trips</item>
        <item>Friends</item>
        <item>Notifications</item>
        <item>About us</item>
        <item>Logout</item>
    </string-array>

    <string-array name="nav_drawer_items">
        <item>Profile</item>
        <item>My Trips</item>
        <item>Friends</item>
        <item>Notifications</item>
        <item>About us</item>
        <item>Logout</item>
    </string-array>

    <!-- Iconos de los items -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_attach_money_grey600_18dp</item>
        <item>@drawable/ic_cake_grey600_18dp</item>
        <item>@drawable/ic_attach_money_grey600_18dp</item>
        <item>@drawable/ic_cake_grey600_18dp</item>
        <item>@drawable/ic_attach_money_grey600_18dp</item>
        <item>@drawable/ic_cake_grey600_18dp</item>
    </array>

    <string name="OK">OK</string>
    <string name="mapRoute">View route in map</string>
    <string name="addSite">Add new Site</string>
    <string name="addSiteCorrectly">New site added correctly</string>
    <string name="anyLocation">You have not selected any location!</string>
    <string name="title_activity_friends">Amigos</string>
    <string name="action_settings">About us</string>
    <string name="addFriend">Add Friend</string>
    <string name="title_activity_test">test</string>
    <string name="noFriendsAlert">You have no friends to invite!</string>
    <string name="trips">Trips</string>
    <string name="login">Loading...</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_settings">About us</string>
    <string name="siteView">View Site</string>
    <string name="updatePasswordButton">Update Password</string>
    <string name="oldPasswHint">old Password</string>
    <string name="newPasswHint">new Password</string>
    <string name="editPasswordForm">Edit Password</string>
    <string name="myLocation">My location</string>
    <string name="tryAgain">TRY AGAIN</string>
    <string name="notificationAdd">Added you to a trip</string>
    <string name="notificationDelete">It is removed from a trip</string>
    <string name="notificationDrop">You have been removed from a trip</string>
    <string name="friendDel">Are you sure you want to leave friendship with this user?</string>
    <string name="tripDel">Are you sure you want to stop doing this trip?</string>
    <string name="siteDel">Are you sure you want to miss this place?</string>
    <string name="notificationAccept">Accepts your friend request</string>
    <string name="notificationDecline">Rejects your friend request</string>
    <string name="noInternet">No Internet connection found. Check your connection or try again.</string>
    <string name="about">This app has been developed by:\nMireia Andreu\nDavid Cara\nVictor Cruz\nDavid García\nJofré Orús\nVíctor Segura\nMarc Solé\nJavier Villar\nContact us at: infotrip2gether@gmail.com</string>
    <string name="textNoElements">No items to show.</string>
    <string name="textNoElementsSiteList">No sites that show, please add a new site to visit!</string>
    <string name="textNoElementsTripList">No trips to show, press the \'+\' icon to begin your adventure!</string>
    <string name="textNoElementsTripList2">Are you ready?</string>
    <string name="textNoElementsFriends">No friendship to show, please add a new friendship!</string>
    <string name="textNoElementsNotificationList">No notifications to read.</string>
</resources>
