<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <!--USERNAME LABEL-->
    <EditText
        android:id="@+id/user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/userHint"
        android:padding="10dp"
        android:layout_marginTop="290dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:singleLine="true"
        android:textColor="#333333"
        android:textColorHint="#5e6266"
        android:background="@drawable/rounded_corner"/>

    <!--PASSWORD LABEL-->
    <EditText
        android:id="@+id/passw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/passwHint"
        android:padding="10dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:singleLine="true"
        android:textColor="#333333"
        android:textColorHint="#5e6266"
        android:inputType="textPassword"/>

    <!--LOGIN BUTTON-->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:text="@string/loginButton"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:background="@drawable/button_custom"
        android:gravity="center"
        android:textSize="18dp" />


    <!-- REGISTER BUTTON-->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/registerButton"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        />

</LinearLayout>