<?xml version="1.0" encoding="utf-8"?>
<!-- DRAWER NAVIGATION -->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="group.lis.uab.trip2gether.controller.TripList"
        tools:ignore="MergeRootFrame">

        <include android:id="@+id/action_bar_site_view"
            layout="@layout/action_bar_site_view"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="56dp"
            android:padding="20dp">
            <!-- SITE NAME -->
            <LinearLayout
                android:id="@+id/linear_layout_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"/>
                <TextView
                    android:id="@+id/nombreSiteView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
            <!-- SITE DESCRIPTION -->
            <LinearLayout
                android:id="@+id/linear_layout_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/linear_layout_name">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"/>
                <TextView
                    android:id="@+id/descripcionSiteView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
            <!-- SITE DURATION -->
            <LinearLayout
                android:id="@+id/linear_layout_duracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/linear_layout_description">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duracion"/>

                <TextView
                    android:id="@+id/duracionSiteView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/minutos"/>
            </LinearLayout>

            <!-- SITE PRICE -->
            <LinearLayout
                android:id="@+id/linear_layout_precio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/linear_layout_duracion">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precio"/>

                <TextView
                    android:id="@+id/precioSiteView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moneda"/>
            </LinearLayout>

            <!-- SITE MAP -->
            <fragment
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:id="@+id/mapSite"
                tools:context="group.lis.uab.trip2gether.controller.SiteView"
                android:name="com.google.android.gms.maps.SupportMapFragment"/>
        </LinearLayout>

    </FrameLayout>
    <!-- CONTENT DRAWER -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:background="#ffffff"/>

</android.support.v4.widget.DrawerLayout>